// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BeforeApplyingForSale display Before Applying when type is Habitat listing detail 1`] = `
<li
  className="list-section custom-counter__item"
>
  <header
    className="list-section__header custom-counter__header"
  >
    <hgroup>
      <h4
        className="custom-counter__title"
      >
        Before applying
      </h4>
      <span
        className="custom-counter__subtitle"
      >
        Make sure you:
      </span>
    </hgroup>
  </header>
  <ol
    className="numbered-list my-5 bg-white p-4 pt-6 text-sm"
  >
    <li>
      <div>
        <span>
          Go to a 
          <a
            href="https://habitatgsf.org/amber-drive-info/"
            target="_blank"
          >
            Habitat for Humanity information session
          </a>
        </span>
      </div>
    </li>
    <li>
      Haven't owned residential property in the past 3 years
    </li>
    <li>
      <div>
        <span>
          Meet the 
          <a
            href="https://sfmohcd.org/sites/default/files/Documents/MOH/Inclusionary%20Manuals/Inclusionary%20Affordable%20Housing%20Program%20Manual%2010.15.2018.pdf"
            target="_blank"
          >
            income requirements
          </a>
        </span>
      </div>
    </li>
    <li>
      Have a 650 credit score or higher
    </li>
  </ol>
  <div>
    <span>
      Read 
      <a
        href="https://habitatgsf.org/amber-drive-info/"
        target="_blank"
      >
        our full list of requirements
      </a>
       for more details.
    </span>
  </div>
</li>
`;

exports[`BeforeApplyingForSale display Before Applying when type is directory 1`] = `
<div
  className="mb-8"
>
  <h2
    className="text-caps-underline mb-5"
  >
    Before applying
  </h2>
  <p>
    Make sure you:
  </p>
  <ol
    className="numbered-list my-5"
  >
    <li>
      Haven't owned residential property in the past 3 years
    </li>
    <li>
      <div>
        <span>
          Meet our 
          <a
            href="https://sfmohcd.org/homebuyer-program-eligibility"
            target="_blank"
          >
            income requirements
          </a>
        </span>
      </div>
    </li>
    <li>
      <div>
        <span>
          Complete 
          <a
            href="https://sfmohcd.org/homebuyer-application-requirements#education"
            target="_blank"
          >
            homebuyer education
          </a>
        </span>
      </div>
    </li>
    <li>
      <div>
        <span>
          Get pre-approved for a mortgage loan by a 
          <a
            href="https://sfmohcd.org/lender-list"
            target="_blank"
          >
            lender on our list
          </a>
        </span>
      </div>
    </li>
    <li>
      Have enough in savings for closing costs and downpayment
    </li>
  </ol>
  <div>
    <span>
      Read 
      <a
        href="https://sfmohcd.org/homebuyer-program-eligibility"
        target="_blank"
      >
        our full list of requirements
      </a>
       for more details.
    </span>
  </div>
</div>
`;

exports[`BeforeApplyingForSale display Before Applying when type is listing detail 1`] = `
<li
  className="list-section custom-counter__item"
>
  <header
    className="list-section__header custom-counter__header"
  >
    <hgroup>
      <h4
        className="custom-counter__title"
      >
        Before applying
      </h4>
      <span
        className="custom-counter__subtitle"
      >
        Make sure you:
      </span>
    </hgroup>
  </header>
  <ol
    className="numbered-list my-5 bg-white p-4 pt-6 text-sm"
  >
    <li>
      Haven't owned residential property in the past 3 years
    </li>
    <li>
      <div>
        <span>
          Meet our 
          <a
            href="https://sfmohcd.org/homebuyer-program-eligibility"
            target="_blank"
          >
            income requirements
          </a>
        </span>
      </div>
    </li>
    <li>
      <div>
        <span>
          Complete 
          <a
            href="https://sfmohcd.org/homebuyer-application-requirements#education"
            target="_blank"
          >
            homebuyer education
          </a>
        </span>
      </div>
    </li>
    <li>
      <div>
        <span>
          Get pre-approved for a mortgage loan by a 
          <a
            href="https://sfmohcd.org/lender-list"
            target="_blank"
          >
            lender on our list
          </a>
        </span>
      </div>
    </li>
    <li>
      Have enough in savings for closing costs and downpayment
    </li>
  </ol>
  <div>
    <span>
      Read 
      <a
        href="https://sfmohcd.org/homebuyer-program-eligibility"
        target="_blank"
      >
        our full list of requirements
      </a>
       for more details.
    </span>
  </div>
</li>
`;
